Add endpoint GET /api/v2/users/{username}/counters (and related changes).